# retention_bot

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  Dockerfile.debug  README.md  docker-compose.docker.yml  docker-compose.logging.yml  docker-compose.prod.yml  prometheus.prod.yml  prometheus.yml  pyproject.toml  ruff.toml
docs/: DEPLOY_VPS.md  OBSERVABILITY.md
ops/: README_LOGGING.md
ops/loki/: loki.yml
src/: datetime_utils.py  main.py  middlewares.py  paywall.py  plans.py  privacy.py  rate_limiter.py  schedule.py  settings.py  user_context.py  utils.py
tests/: __init__.py  test_accept_client_invite.py  test_audit_log_repository_anonymize.py  test_client_list_bookings_master_alias.py  test_client_master_aliases.py  test_db_integration_repositories.py  test_entitlements_bookings_month_by_start_at.py  test_expresspay_utils.py  test_handlers_admin_plan_render.py  test_handlers_billing_pro_confirm.py  test_handlers_client_booking.py  test_handlers_client_booking_done_close.py  test_handlers_client_list_bookings.py  test_handlers_client_list_bookings_empty_close.py  test_handlers_client_list_masters_alias_cleanup.py  test_handlers_client_list_masters_book_calendar.py  test_handlers_client_list_masters_phone_masking.py  test_handlers_client_register.py  test_handlers_client_register_personal_data.py  test_handlers_client_settings_guide.py  test_handlers_client_settings_phone_conflict.py  test_handlers_client_settings_ui.py  test_handlers_master_add_booking.py  test_handlers_master_add_client.py  test_handlers_master_booking_review.py  (+37 more)
(+181 files in other folders)
