[project]
name = "retention-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.13.*"
dependencies = [
    "aiogram>=3.23.0",
    "aiogram-calendar>=0.6.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "mypy>=1.19.0",
    "phonenumbers>=9.0.20",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.1.0",
    "redis>=7.1.0",
    "ruff>=0.14.8",
    "sqlalchemy[asyncio]>=2.0.45",
]
